done component FilterLoading

--- a/client/src/features/Hotel/pages/MainPage/styles.scss
+++ b/client/src/features/Hotel/pages/MainPage/styles.scss
@@ -64,6 +64,7 @@
             width: 74%;
             min-height: 100vh;
             padding: 0.5rem;
+            position: relative;
 
             &__search-result {
                 font-size: 20px;
