--- a/client/src/features/Hotel/pages/HoTelDetailPage/HotelDetailPage.scss
+++ b/client/src/features/Hotel/pages/HoTelDetailPage/HotelDetailPage.scss
@@ -78,4 +78,27 @@
             }
         }
     }
+
+    &__body {
+        &__about-hotel {
+            font-size: 13.5px;
+            letter-spacing: 1px;
+            line-height: 25px;
+
+            h5 {
+                margin-bottom: 1rem;
+            }
+        }
+
+        &__favourite-convenients {
+            margin-top: 1rem;
+            padding-bottom: 2rem;
+            border-bottom: 1px solid #e7e7e7;
+            &__title {
+                font-size: 16px;
+                font-weight: bold;
+                color: #000;
+            }
+        }
+    }
 }
