--- a/client/src/features/Hotel/pages/HoTelDetailPage/HotelDetailPage.scss
+++ b/client/src/features/Hotel/pages/HoTelDetailPage/HotelDetailPage.scss
@@ -1,20 +1,6 @@
 .wrapper {
     &__content {
         &__left {
-            .quote {
-                font-style: italic;
-                font-size: 13px;
-                padding: 0.75rem;
-                text-align: center;
-                margin-bottom: 1rem;
-                background: #ebf3ff;
-                font-weight: bold;
-                text-transform: capitalize;
-
-                img {
-                    margin-right: 5px;
-                }
-            }
         }
 
         &__right {
@@ -100,5 +86,39 @@
                 color: #000;
             }
         }
+
+        &__empty-room {
+            margin-top: 1rem;
+            &__header {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+
+                & .title {
+                    font-size: 25px;
+                    font-weight: 500;
+                }
+            }
+        }
     }
+}
+
+// global
+.quote {
+    font-style: italic;
+    font-size: 13px;
+    padding: 0.75rem;
+    text-align: center;
+    margin-bottom: 1rem;
+    background: #ebf3ff;
+    font-weight: bold;
+    text-transform: capitalize;
+
+    img {
+        margin-right: 5px;
+    }
+}
+
+.no-bg {
+    background: #fff !important;
 }
