done 80% hotel detail page

--- a/client/src/assets/styles/style.scss
+++ b/client/src/assets/styles/style.scss
@@ -6,6 +6,9 @@ a.btn-primary {
     font-weight: bold;
     color: #fff;
     text-decoration: none;
+    display: inline-block;
+    font-size: 13px;
+    cursor: pointer;
 }
 
 a.btn-primary:hover {
