--- a/client/src/features/Hotel/components/InfoSearch/InfoSearch.scss
+++ b/client/src/features/Hotel/components/InfoSearch/InfoSearch.scss
@@ -31,20 +31,22 @@
 
     &__modal {
         width: 100%;
-        height: 200%;
-        position: absolute;
+        height: 100%;
+        position: fixed;
         top: 0;
         left: 0;
         background-color: rgba(0, 0, 0, 0.4);
+        z-index: 100;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
         &__formEdit {
-            margin: 0 auto;
             box-shadow: 1px 1px 25px -8px #aaa;
             background-color: #fff;
             padding: 1rem 2rem;
             border-radius: 5px;
             width: 60%;
-            margin-top: 50rem;
 
             &__header {
                 display: flex;
