--- a/client/src/features/Hotel/components/Carousel/Carousel.scss
+++ b/client/src/features/Hotel/components/Carousel/Carousel.scss
@@ -6,18 +6,21 @@
 
         &__list {
             margin-top: 1rem;
-            width: 2370px;
             list-style: none;
             padding: 0;
             display: flex;
+            transition: 0.5s forwards;
 
             &__item {
+                transition: 0.5s forwards;
+
+                flex-shrink: 0;
                 font-size: 12px;
                 padding: 20px;
                 border: 1px solid #e0e0e0;
                 min-height: 200px;
                 margin-right: 15px;
-                width: 350px;
+                width: 370px;
             }
         }
     }
