--- a/client/src/features/Auth/style.scss
+++ b/client/src/features/Auth/style.scss
@@ -1,9 +1,9 @@
 .body {
     text-align: center;
-    background-color: #00224f;
-
     font-size: 14px;
     line-height: 1.4;
     font-family: sans-serif;
-
+    .content-bg {
+        background-color: #00224f;
+    }
 }
