Done sign-in page v1

--- a/client/src/features/Auth/components/FooterInfor/FooterInfor.scss
+++ b/client/src/features/Auth/components/FooterInfor/FooterInfor.scss
@@ -24,6 +24,9 @@
                     :first-child {
                         content: unset;
                     }
+                    :hover {
+                        text-decoration: none;
+                    }
                     a {
                         font-size: 12px;
                         color: #fff;
