--- a/client/src/features/Hotel/components/ViewAllFeedBack/ViewAllFeedBack.scss
+++ b/client/src/features/Hotel/components/ViewAllFeedBack/ViewAllFeedBack.scss
@@ -18,6 +18,7 @@
         background-color: #fff;
         box-shadow: 1px 1px 25px -8px #000;
         padding: 1.75rem;
+        transition: all 0.3s;
 
         &__top {
             display: flex;
