fix done header footer

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -45,6 +45,9 @@
                 font-weight: 500;
                 background-color: #fff;
             }
+            &__btn-fullfill:hover {
+                background-color: rgb(248, 234, 234);
+            }
         }
     }
 
