--- a/client/src/features/Auth/components/FooterInfor/FooterInfor.scss
+++ b/client/src/features/Auth/components/FooterInfor/FooterInfor.scss
@@ -17,13 +17,8 @@
                 align-items: center;
                 li {
                     display: inline-block;
-                    :before {
-                        content: "|";
-                        margin: 0 5px;
-                    }
-                    :first-child {
-                        content: unset;
-                    }
+                    margin-right: 5px;
+                    padding-left: 5px;
                     :hover {
                         text-decoration: none;
                     }
