--- a/client/src/features/Auth/components/FormRegister/FormRegister.scss
+++ b/client/src/features/Auth/components/FormRegister/FormRegister.scss
@@ -13,6 +13,14 @@
 
         display: flex;
     }
+    &__text {
+        display: flex;
+        margin-bottom: 20px;
+
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 18px;
+    }
     Form {
         font-size: 15px;
         font-weight: 500;
@@ -20,6 +28,9 @@
         Label {
             display: flex;
             margin: 10px 0;
+            span {
+                color: rgb(204, 24, 24);
+            }
         }
         Button {
             width: 100%;
@@ -28,9 +39,18 @@
         .forget-pass {
             margin-top: 5px;
             display: flex;
-            :hover {
+            a {
                 text-decoration: none;
             }
+        }
+        .helper {
+            display: flex;
+
+            font-size: 11px;
+            font-weight: 300px;
+            line-height: 13px;
+
+            margin-bottom: 8px;
         }
     }
 }
