--- a/client/src/features/Hotel/pages/MainPage/MainPage.scss
+++ b/client/src/features/Hotel/pages/MainPage/MainPage.scss
@@ -1,7 +1,7 @@
 .wrapper {
-    padding-bottom: 3rem;
-    margin-top: 0.5rem;
-
+    padding: 0.5rem 0 3rem 0;
+    margin: 0 auto;
+    width: 75%;
     &__content {
         display: flex;
         justify-content: space-between;
