--- a/client/src/features/Hotel/components/SearchHotel/SearchHotel.scss
+++ b/client/src/features/Hotel/components/SearchHotel/SearchHotel.scss
@@ -122,5 +122,100 @@
                 }
             }
         }
+
+        &__container {
+            padding-top: 5rem;
+            background: #fff;
+            width: 75%;
+            margin: 0 auto;
+            &__city {
+                display: block;
+                position: relative;
+                height: 270px;
+
+                .city-image {
+                    display: block;
+                    background-color: #000;
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                    filter: brightness(80%);
+                }
+
+                .city-image:hover {
+                    filter: brightness(70%);
+                }
+
+                &__info {
+                    position: absolute;
+                    top: 10px;
+                    left: 20px;
+                    color: #fff;
+                    text-shadow: 1px 1px 1px #000;
+                    div {
+                        font-size: 30px;
+                        font-weight: bold;
+                    }
+
+                    span {
+                        font-size: 14px;
+                        display: block;
+                    }
+                }
+            }
+
+            &__category {
+                margin-top: 2rem;
+                .find-what {
+                    font-size: 20px;
+                    font-weight: bold;
+                }
+
+                &__info {
+                    padding-bottom: 1rem;
+                    img {
+                        width: 100%;
+                        height: 100%;
+                    }
+
+                    .title {
+                        font-weight: bold;
+                        margin-top: 1rem;
+                    }
+                    span {
+                        font-size: 14px;
+                        color: #666;
+                        margin-bottom: 10px;
+                    }
+                    .text {
+                        padding-left: 10px;
+
+                        .wrapper-info {
+                            display: flex;
+                            align-items: center;
+                            margin-top: 5px;
+                            color: #666;
+
+                            div {
+                                margin-right: 5px;
+                            }
+
+                            .feedback-message {
+                                font-weight: bold;
+                                font-size: 14px;
+                            }
+                        }
+                    }
+                }
+                a {
+                    text-decoration: none;
+                    color: #333;
+                }
+
+                .description {
+                    color: #666;
+                }
+            }
+        }
     }
 }
