--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -6,7 +6,7 @@
 .header {
     width: 75%;
     margin: 0 auto;
-    padding: 1.5rem 0;
+    padding: 1rem 0;
     color: #fff;
 
     a {
@@ -23,6 +23,8 @@
             margin-left: 1rem;
         }
         &__right {
+            display: flex;
+            align-items: center;
             &__currency {
             }
             &__country {
@@ -47,6 +49,69 @@
             }
             &__btn-fullfill:hover {
                 background-color: rgb(248, 234, 234);
+            }
+
+            &__profile {
+                display: flex;
+                align-items: center;
+                position: relative;
+                margin-left: 10px;
+                cursor: pointer;
+                padding: 10px;
+                border-radius: 2px;
+
+                &__avatar {
+                    width: 35px;
+                    height: 35px;
+                    margin-right: 10px;
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                    }
+                }
+                &__name {
+                    font-weight: bold;
+                    font-size: 13px;
+                }
+                &__menu {
+                    position: absolute;
+                    right: 20%;
+                    top: 110%;
+                    background: #fff;
+                    border-radius: 2px;
+                    color: #666;
+                    font-size: 14px;
+                    width: 130%;
+                    z-index: 1000;
+
+                    span {
+                        font-size: 20px;
+                    }
+
+                    ul {
+                        li {
+                            padding: 10px 10px;
+                        }
+
+                        li:hover {
+                            background: #eee;
+                        }
+                    }
+
+                    a {
+                        color: #666;
+                        margin-left: 7px;
+                    }
+                }
+            }
+
+            .active {
+                background: hsla(0, 0%, 100%, 0.1);
+            }
+
+            &__profile:hover {
+                background: hsla(0, 0%, 100%, 0.1);
             }
         }
     }
