--- a/client/src/features/Auth/pages/About/About.scss
+++ b/client/src/features/Auth/pages/About/About.scss
@@ -1,3 +1,21 @@
 .about {
     background-color: #eee;
+
+    &__tab {
+        width: 70%;
+        margin: 0 auto;
+        min-height: 60vh;
+    }
+}
+
+.box {
+    padding: 20px 20px;
+    background: #fff;
+    min-height: 10vh;
+    width: 75%;
+
+    h5 {
+        font-weight: 400;
+        font-size: 20px;
+    }
 }
