--- a/client/src/features/Auth/pages/About/Payment/Payment.scss
+++ b/client/src/features/Auth/pages/About/Payment/Payment.scss
@@ -3,6 +3,65 @@
 
     &__left {
         margin-right: 1rem;
+
+        &__is-credit {
+            margin-top: 1rem;
+
+            &__credit-card {
+                font-size: 13px;
+                img {
+                    width: 50px;
+                    height: 30px;
+                    object-fit: contain;
+                    margin-right: 5px;
+                }
+            }
+        }
+
+        .no-credit {
+            font-size: 11.5px;
+            color: #6b6b6b;
+            font-weight: bold;
+        }
+
+        &__header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 13px;
+
+            &__fee {
+                font-size: 20px;
+                color: #008009;
+                text-align: end;
+            }
+        }
+
+        .ant-checkbox-wrapper + .ant-checkbox-wrapper {
+            margin-left: 0;
+        }
+
+        &__main {
+            width: 50%;
+        }
+
+        &__final-confirm {
+            div.sub-title {
+                font-size: 18px;
+                margin-bottom: 5px;
+            }
+            span.describe {
+                font-size: 12px;
+                color: #6b6b6b;
+            }
+        }
+        .note {
+            font-size: 12px;
+            margin-top: 10px;
+            font-weight: bold;
+            color: #6b6b6b;
+            text-align: center;
+        }
     }
     &__right {
         font-size: 12px;
