add state to some components

--- a/client/src/custom-fields/SelectField/SelectField.scss
+++ b/client/src/custom-fields/SelectField/SelectField.scss
@@ -1,9 +1,8 @@
 .select-field {
     label {
-        font-size: 14px;
+        font-size: 13.5px;
         margin-bottom: 5px;
-    }
-    .form-select {
-        font-size: 14px;
+        margin-right: 10px;
+        display: block;
     }
 }
