--- a/client/src/features/Auth/components/HeaderAbout/HeaderAbout.scss
+++ b/client/src/features/Auth/components/HeaderAbout/HeaderAbout.scss
@@ -15,9 +15,9 @@
         }
         &__right {
             ul {
+                margin: 0;
                 list-style-type: none;
                 display: flex;
-
                 align-items: center;
                 font-size: 14px;
                 li {
