--- a/client/src/assets/styles/style.scss
+++ b/client/src/assets/styles/style.scss
@@ -65,4 +65,15 @@ a.btn-primary-outline:hover {
     }
 }
 
+/*-------OVERWRITE ANTD----------*/
+
+.ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
+    height: 40px;
+    line-height: 40px;
+}
+
+.ant-select-single .ant-select-selector {
+    align-items: center;
+}
+
 /*-----------------------------------*/
