done booking page

--- a/client/src/features/Hotel/components/SearchHotel/SearchHotel.scss
+++ b/client/src/features/Hotel/components/SearchHotel/SearchHotel.scss
@@ -33,6 +33,7 @@
                 line-height: 100%;
                 height: 50px;
                 outline: none;
+                color: #666;
             }
 
             .input-field {
