--- a/client/src/custom-fields/SelectField/SelectField.scss
+++ b/client/src/custom-fields/SelectField/SelectField.scss
@@ -1,8 +1,9 @@
 .select-field {
     label {
-        font-size: 13.5px;
+        font-size: 13px;
         margin-bottom: 5px;
         margin-right: 10px;
         display: block;
     }
+    margin-bottom: 15px;
 }
