fix feature search hotel

--- a/client/src/assets/styles/style.scss
+++ b/client/src/assets/styles/style.scss
@@ -1,5 +1,6 @@
 /*--------------BUTTON PRIMARY---------------*/
-a.btn-primary {
+a.btn-primary,
+button.btn-primary {
     padding: 0.5rem 1rem;
     border: none;
     background: #0071c2;
@@ -12,6 +13,9 @@ a.btn-primary {
 }
 
 a.btn-primary:hover {
+    background: #0a3a5c;
+}
+button.btn-primary:hover {
     background: #0a3a5c;
 }
 /*--------------BUTTON OUTLINE---------------*/
