--- a/client/src/features/Auth/pages/About/LayoutNPrice/LayoutNPrice.scss
+++ b/client/src/features/Auth/pages/About/LayoutNPrice/LayoutNPrice.scss
@@ -1,5 +1,11 @@
 .layout-and-price {
     .row {
+        .remove-icon{
+            button{
+                height: 40px;
+                margin-left: 7px;
+            }
+        }
         .sticky-col {
             font-size: 12px;
             padding: 16px;
@@ -20,9 +26,11 @@
             form {
                 margin-top: 15px;
                 border-radius: 4px;
-                button {
-                    margin-top: 10px;
-                    width: 100%;
+                .btn-submit{
+                    button {
+                        margin-top: 10px;
+                        width: 100%;
+                    }
                 }
                 fieldset {
                     padding: 16px;
