fix some issue TimeLine

--- a/client/src/features/Hotel/pages/HoTelDetailPage/components/TimeLine/TimeLine.scss
+++ b/client/src/features/Hotel/pages/HoTelDetailPage/components/TimeLine/TimeLine.scss
@@ -45,4 +45,14 @@
         }
     }
 
+    .is-start{
+        border-top-left-radius: 20px;
+        border-bottom-left-radius: 20px;
+    }
+
+    .is-end{
+        border-top-right-radius: 20px;
+        border-bottom-right-radius: 20px;
+    }
+
 }
