--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,152 +1,157 @@
 .header-wrapper {
-    background-color: #003580;
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
+  background-color: #003580;
 }
 
 .header {
-    width: 75%;
-    margin: 0 auto;
-    padding: 0.9rem 0;
+  width: 75%;
+  margin: 0 auto;
+  padding: 0.9rem 0;
+  color: #fff;
+
+  a {
+    text-decoration: none;
     color: #fff;
+  }
 
-    a {
-        text-decoration: none;
-        color: #fff;
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    &__left {
+      font-size: 25px;
+      font-weight: bold;
+      margin-left: 1rem;
     }
+    &__right {
+      display: flex;
+      align-items: center;
+      &__currency {
+      }
+      &__country {
+        margin: 0 2rem;
+        border-radius: 50%;
+        height: 25px;
+        width: 25px;
+      }
+      &__btn-outline {
+        border: 1px solid #fff;
+        padding: 9px 8px;
+        font-size: 14px;
+        font-weight: 500;
+      }
+      &__btn-fullfill {
+        padding: 8px 12px;
+        font-size: 14px;
+        margin-left: 0.75rem;
+        color: #0071c2 !important;
+        font-weight: 500;
+        background-color: #fff;
+      }
+      &__btn-fullfill:hover {
+        background-color: rgb(248, 234, 234);
+      }
 
-    &__top {
+      &__profile {
         display: flex;
-        justify-content: space-between;
-        &__left {
-            font-size: 25px;
-            font-weight: bold;
-            margin-left: 1rem;
+        align-items: center;
+        position: relative;
+        margin-left: 10px;
+        cursor: pointer;
+        padding: 10px;
+        border-radius: 2px;
+
+        &__avatar {
+          width: 35px;
+          height: 35px;
+          margin-right: 10px;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
         }
-        &__right {
-            display: flex;
-            align-items: center;
-            &__currency {
-            }
-            &__country {
-                margin: 0 2rem;
-                border-radius: 50%;
-                height: 25px;
-                width: 25px;
-            }
-            &__btn-outline {
-                border: 1px solid #fff;
-                padding: 9px 8px;
-                font-size: 14px;
-                font-weight: 500;
-            }
-            &__btn-fullfill {
-                padding: 8px 12px;
-                font-size: 14px;
-                margin-left: 0.75rem;
-                color: #0071c2 !important;
-                font-weight: 500;
-                background-color: #fff;
-            }
-            &__btn-fullfill:hover {
-                background-color: rgb(248, 234, 234);
-            }
-
-            &__profile {
-                display: flex;
-                align-items: center;
-                position: relative;
-                margin-left: 10px;
-                cursor: pointer;
-                padding: 10px;
-                border-radius: 2px;
-
-                &__avatar {
-                    width: 35px;
-                    height: 35px;
-                    margin-right: 10px;
-                    img {
-                        width: 100%;
-                        height: 100%;
-                        object-fit: cover;
-                    }
-                }
-                &__name {
-                    font-weight: bold;
-                    font-size: 13px;
-                }
-                &__menu {
-                    position: absolute;
-                    right: 20%;
-                    top: 110%;
-                    background: #fff;
-                    border-radius: 2px;
-                    color: #666;
-                    font-size: 14px;
-                    width: 130%;
-                    z-index: 1000;
-                    box-shadow: 1px 1px 25px -8px #aaa;
-
-                    span {
-                        font-size: 20px;
-                        margin-right: 10px;
-                    }
-
-                    ul {
-                        li {
-                            padding: 10px 10px;
-                        }
-
-                        li:hover {
-                            background: #eee;
-                        }
-                    }
-
-                    a {
-                        color: #666;
-                        margin-left: 7px;
-                        display: block;
-                    }
-                }
-            }
-
-            .active {
-                background: hsla(0, 0%, 100%, 0.1);
-            }
-
-            &__profile:hover {
-                background: hsla(0, 0%, 100%, 0.1);
-            }
+        &__name {
+          font-weight: bold;
+          font-size: 13px;
         }
+        &__menu {
+          position: absolute;
+          right: 20%;
+          top: 110%;
+          background: #fff;
+          border-radius: 2px;
+          color: #666;
+          font-size: 14px;
+          width: 130%;
+          z-index: 1000;
+          box-shadow: 1px 1px 25px -8px #aaa;
+
+          span {
+            font-size: 20px;
+            margin-right: 10px;
+          }
+
+          ul {
+            li {
+              padding: 10px 10px;
+            }
+
+            li:hover {
+              background: #eee;
+            }
+          }
+
+          a {
+            color: #666;
+            margin-left: 7px;
+            display: block;
+          }
+        }
+      }
+
+      .active {
+        background: hsla(0, 0%, 100%, 0.1);
+      }
+
+      &__profile:hover {
+        background: hsla(0, 0%, 100%, 0.1);
+      }
     }
+  }
 
-    &__bottom {
-        &__items {
-            padding: 0;
-            list-style: none;
-            margin-top: 1rem;
-            &__item {
-                padding: 10px 15px;
-                text-align: center;
-                border-radius: 30px;
-                display: inline-block;
-                margin-right: 0.75rem;
-                font-size: 13px;
-                font-weight: 500;
-                cursor: pointer;
-                svg {
-                    fill: #fff;
-                    margin-right: 7px;
-                    width: 20px;
-                    height: 20px;
-                }
-            }
-
-            &__item:hover {
-                background: hsla(0, 0%, 100%, 0.1);
-            }
-
-            .active {
-                border: 1px solid #fff;
-            }
+  &__bottom {
+    &__items {
+      padding: 0;
+      list-style: none;
+      margin-top: 1rem;
+      &__item {
+        padding: 10px 15px;
+        text-align: center;
+        border-radius: 30px;
+        display: inline-block;
+        margin-right: 0.75rem;
+        font-size: 13px;
+        font-weight: 500;
+        cursor: pointer;
+        svg {
+          fill: #fff;
+          margin-right: 7px;
+          width: 20px;
+          height: 20px;
         }
+      }
+
+      &__item:hover {
+        background: hsla(0, 0%, 100%, 0.1);
+      }
+
+      .active {
+        border: 1px solid #fff;
+      }
     }
+  }
 }
