--- a/client/src/features/Auth/components/FormSign/FormSign.scss
+++ b/client/src/features/Auth/components/FormSign/FormSign.scss
@@ -1,6 +1,6 @@
 .form-site {
     padding: 20px;
-    text-align: center;
+    align-items: center;
     width: 400px;
     max-width: 100%;
     margin-left: auto;
@@ -24,19 +24,15 @@
         Button {
             width: 100%;
         }
-
-        .forget-pass {
-            margin-top: 5px;
-            display: flex;
-            :hover {
-                text-decoration: none;
-            }
+        .input-login-area{
+            border: 1px solid #b3b2b2;
         }
-        .error-message {
+        .loggin-form-link-regis{
+            padding-top: 15px;
+            
+        }
+        a{
             display: flex;
-            margin: 5px 5px;
-            color: rgb(192, 49, 49);
-            font-style: italic;
         }
     }
 }
