--- a/client/src/features/Hotel/components/FeedBackItem/FeedBackItem.scss
+++ b/client/src/features/Hotel/components/FeedBackItem/FeedBackItem.scss
@@ -15,6 +15,13 @@
             line-height: 35px;
             text-align: center;
             margin-right: 10px;
+            overflow: hidden;
+
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
         }
         &__info {
             &__name {
@@ -77,6 +84,7 @@
 
     &__items {
         margin-top: 1rem;
+        width: 95%;
         .item {
             display: flex;
             align-items: center;
