--- a/client/src/features/Hotel/components/HightLightComments/HightLightComments.scss
+++ b/client/src/features/Hotel/components/HightLightComments/HightLightComments.scss
@@ -12,6 +12,14 @@
             line-height: 35px;
             text-align: center;
             margin-right: 10px;
+            overflow: hidden;
+
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+
+            }
         }
         &__info {
             &__name {
