--- a/client/src/features/Hotel/components/PlaceOverView/PlaceOverView.scss
+++ b/client/src/features/Hotel/components/PlaceOverView/PlaceOverView.scss
@@ -1,4 +1,4 @@
-.Hotel-Over-View {
+.place-Over-View {
     display: flex;
     font-size: 13px;
     border: 1px solid #ccc;
@@ -8,7 +8,7 @@
     &__banner {
         width: 200px;
         height: 200px;
-        object-fit: contain;
+        object-fit: cover;
         border-radius: 5px;
         margin-right: 1rem;
     }
@@ -20,20 +20,26 @@
             font-size: 22px;
             font-weight: bold;
             text-decoration: none;
+            line-height: 18px;
         }
         &__name:hover {
             cursor: pointer;
             color: #bc5b01;
+            line-height: 18px;
         }
         &__place {
             color: #0071c5;
             text-decoration: underline;
             font-weight: 500;
-            margin: 5px 0 2px 0;
+            margin: 1px 0 2px 0;
         }
 
         &__convenient {
             font-weight: bold;
+            svg{
+                height: 12px;
+                width: 12px;
+            }
         }
 
         &__about svg {
