--- a/client/src/features/Hotel/components/SearchHotel/SearchHotel.scss
+++ b/client/src/features/Hotel/components/SearchHotel/SearchHotel.scss
@@ -36,14 +36,6 @@
                 color: #666;
             }
 
-            // .input-field {
-            //     margin-bottom: 0 !important;
-
-            //     input:focus {
-            //         border: none;
-            //         box-shadow: none;
-            //     }
-            // }
             .date {
                 justify-content: center;
             }
@@ -74,11 +66,10 @@
                     color: #000;
                     font-size: 14px;
                     background: #fff;
-                    padding: 10px;
                     border-radius: 2px;
                     box-shadow: 1px 1px 25px -8px #000;
                     position: absolute;
-                    top: 60px;
+                    top: 63px;
                     left: 0;
                     width: 100%;
                     z-index: 100;
@@ -88,6 +79,7 @@
                     ul {
                         padding: 0;
                         list-style: none;
+                        margin: 0;
                         .place:hover {
                             background: #f0f0f0;
                         }
@@ -95,6 +87,7 @@
                             display: flex;
                             align-items: center;
                             padding: 0.5rem 1rem;
+                            font-size: 90%;
                             cursor: pointer;
 
                             .icon {
