--- a/client/src/features/Auth/components/FormRegister/FormRegister.scss
+++ b/client/src/features/Auth/components/FormRegister/FormRegister.scss
@@ -1,6 +1,5 @@
 .form-site {
     padding: 20px;
-    text-align: center;
     width: 550px;
     max-width: 100%;
     &__label {
@@ -22,6 +21,7 @@
     Form {
         Button {
             width: 100%;
+            margin-bottom: 10px;
         }
 
         .available-account {
