--- a/client/src/features/Hotel/components/SearchHotel/SearchHotel.scss
+++ b/client/src/features/Hotel/components/SearchHotel/SearchHotel.scss
@@ -154,4 +154,21 @@
             }
         }
     }
+
+     /*-------OVERWRITE ANTD-----------*/
+.ant-input-affix-wrapper {
+    background-color: unset;
+    border: none;
+}
+
+.ant-input-affix-wrapper:not(.ant-input-affix-wrapper-disabled):hover {
+    border-color: unset;
+    border: none;
+}
+.ant-input-affix-wrapper:focus,
+.ant-input-affix-wrapper-focused {
+    border: none;
+    box-shadow: unset;
+}
+/*---------------------------------*/
 }
