--- a/client/src/features/Auth/pages/About/LayoutNPrice/LayoutNPrice.scss
+++ b/client/src/features/Auth/pages/About/LayoutNPrice/LayoutNPrice.scss
@@ -2,7 +2,7 @@
     .row {
         .remove-icon{
             button{
-                height: 40px;
+                height: 2rem;
                 margin-left: 7px;
             }
         }
