--- a/client/src/features/Hotel/components/ViewOnGoogleMap/ViewOnGoogleMap.scss
+++ b/client/src/features/Hotel/components/ViewOnGoogleMap/ViewOnGoogleMap.scss
@@ -38,6 +38,51 @@
         width: 90%;
         height: 90%;
         background: #fff;
+        position: relative;
+
+        .small-screen{
+            position: absolute;
+            top: 0;
+            left: 0;
+            background: #fff;
+            color: #000;
+            padding: 1.5rem;
+            padding-bottom: 1rem;
+            min-width: 200;
+            min-height: 150;
+            box-shadow: 1px 1px 25px -8px #AAA;
+        }
+        
+        .small-screen-main-content{
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+        }
+
+        .small-screen-footer-btn{
+            padding: 0.75rem 0;
+            border: 1px solid #eee;
+            margin-top: 1rem;
+            border-left: none;
+            border-right: none;
+        }
+        
+        .title{
+            font-size: 14px;
+            font-weight: bold;
+            margin-bottom: 3px;
+        }
+        .total-feedback{
+            font-size: 12px;
+            color: #aaa;
+        }
+
+        .address{
+            font-size: 11px;
+            color: #aaa;
+            margin-top: 1rem;
+
+        }
     }
 
     &__icon-close {
@@ -59,4 +104,5 @@
     &__icon-close:hover {
         background: #d2e1f7;
     }
+
 }
