--- a/client/src/features/Admin/pages/Hotel/hotel.scss
+++ b/client/src/features/Admin/pages/Hotel/hotel.scss
@@ -1,6 +1,7 @@
 .hotel-list {
   background-color: #fff;
   border-radius: 0.5rem;
+  margin-top: 1rem;
 
   .hotel-list__actions {
     display: flex;
@@ -26,4 +27,43 @@
   .hotel-list__icon {
     font-size: 0.8rem;
   }
+
+  &__payment-img {
+    width: 38px;
+    height: 38px;
+    margin-right: 10px;
+    object-fit: cover;
+  }
+
+  &__payment-img:last-child {
+    width: 80px;
+  }
+
+  &__convenient-img {
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+  }
+
+  &__hotel-img {
+    width: 234px;
+    height: 200px;
+
+    & img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(195, 195, 195);
 }
