Add Booking Admin Page

--- a/client/src/features/Admin/components/SideBar/sidebar.scss
+++ b/client/src/features/Admin/components/SideBar/sidebar.scss
@@ -73,7 +73,7 @@
 
     &--active {
       background-color: #2e3344;
-      color: white;
+      color: white !important;
       font-weight: bold;
     }
   }
