--- a/client/src/features/Hotel/pages/GeneralManagement/Components/Profile/Profile.scss
+++ b/client/src/features/Hotel/pages/GeneralManagement/Components/Profile/Profile.scss
@@ -1,2 +1,46 @@
 .profile {
+    &__main-title{
+
+
+        &__form{
+            padding: 1rem 4rem 2rem 4rem;
+            border: 1px solid #e0e0e0;
+
+
+            &__avatar{
+                height: 100px;
+                width: 100px;
+                margin: 0 auto;
+                display: flex;
+                flex-shrink: 1;
+                align-items: flex-end;
+
+                //OVERWRITE ANTD
+                .ant-upload-list{
+                    display: none;
+                }
+                /*---------------*/
+                .not-avatar{
+                    background: rgb(33, 119, 33);
+                    width: 90%;
+                    height: 90%;
+                    border-radius: 50%;
+                    text-align: center;
+                    line-height: 90px;
+                    color: #FFF;
+                    font-size: 16px;
+                    font-weight: bold;
+                }
+                img{
+                    width: 90%;
+                    height: 90%;
+                    object-fit: cover;
+                    overflow: hidden;
+                    border-radius: 50%;
+                    box-shadow:1px 1px 25px 0px #ccc ;
+                }
+                
+            }
+        }
+    }
 }
