fix UI management , logic search in mainpage and detailpage

--- a/client/src/features/Hotel/pages/GeneralManagement/Components/Profile/Profile.scss
+++ b/client/src/features/Hotel/pages/GeneralManagement/Components/Profile/Profile.scss
@@ -1,10 +1,9 @@
 .profile {
     &__main-title{
-
-
         &__form{
             padding: 1rem 4rem 2rem 4rem;
             border: 1px solid #e0e0e0;
+            box-shadow: 1px 1px 25px -5px #d0d0d0;
 
 
             &__avatar{
