--- a/client/src/features/Hotel/pages/GeneralManagement/Components/Trip/Trip.scss
+++ b/client/src/features/Hotel/pages/GeneralManagement/Components/Trip/Trip.scss
@@ -1,6 +1,6 @@
 .trip{
     padding: 1rem 2rem;
-    // border: 1px solid #d0d0d0;
+    border: 1px solid #d0d0d0;
     font-size: 14px;
     margin-bottom: 1.5rem;
     box-shadow: 1px 1px 25px -5px #d0d0d0;
