--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -63,19 +63,10 @@
         padding: 10px;
         border-radius: 2px;
 
-        &__avatar {
-          width: 35px;
-          height: 35px;
-          margin-right: 10px;
-          img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-          }
-        }
         &__name {
           font-weight: bold;
           font-size: 13px;
+          margin-left: 5px;
         }
         &__menu {
           position: absolute;
