--- a/client/src/features/Hotel/pages/GeneralManagement/Components/Profile/Profile.scss
+++ b/client/src/features/Hotel/pages/GeneralManagement/Components/Profile/Profile.scss
@@ -1,4 +1,5 @@
 .profile {
+    margin-bottom: 1.5rem;
     &__main-title{
         &__form{
             padding: 1rem 4rem 2rem 4rem;
@@ -20,15 +21,15 @@
                 }
                 /*---------------*/
                 .not-avatar{
-                    background: rgb(33, 119, 33);
+                    background: rgb(245, 106, 0);
                     width: 90%;
                     height: 90%;
                     border-radius: 50%;
                     text-align: center;
                     line-height: 90px;
                     color: #FFF;
-                    font-size: 16px;
-                    font-weight: bold;
+                    font-size: 30px;
+                    font-weight: 500;
                 }
                 img{
                     width: 90%;
