done place booked in managerment page

--- a/client/src/features/Hotel/pages/GeneralManagement/Components/Trip/Trip.scss
+++ b/client/src/features/Hotel/pages/GeneralManagement/Components/Trip/Trip.scss
@@ -40,7 +40,7 @@
             }   
 
          .content{
-             font-size: 14px;
+             font-size: 13.5px;
          }
 
          .total-price{
@@ -72,6 +72,7 @@
        
            .address {
                margin: 5px 0;
+               font-size: 13px;
            }
        
            .feed-back {
@@ -87,6 +88,9 @@
        .main-title{
         margin-left: 2rem;
         margin-bottom: 1rem;
+        font-weight: bold;
+        color: #85144b;
+        font-size: 12px;
     }
     }
 
