--- a/client/src/features/Admin/pages/Payment/payment.scss
+++ b/client/src/features/Admin/pages/Payment/payment.scss
@@ -1,72 +1,72 @@
 .payment-list {
-    background-color: #fff;
-    border-radius: 0.5rem;
-    margin-top: 1rem;
+  background-color: #fff;
+  border-radius: 0.5rem;
+  margin-top: 1rem;
 
-    &__add-btn{
-        display: flex;
-        justify-content: flex-end;
-        padding-top: 1rem;
-        padding-right: 1rem;
-    }
+  &__add-btn {
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 1rem;
+    padding-right: 1rem;
+  }
 
-    img{
-        width:65px;
-        height: 45px;
-        border-radius: 5px;
-    }
-  
-    &__actions {
-      display: flex;
-      align-items: center;
-    }
-  
-    &__action {
-      width: 30px;
-      height: 30px;
-      color: #fff;
-      border-radius: 50%;
-  
-      font-size: 0.8rem;
-      text-align: center;
-      line-height: 32px;
-      cursor: pointer;
-    }
-  
-    &__action:nth-child(2) {
-      margin: 0 8px;
-    }
-  
-    &__icon {
-      font-size: 0.8rem;
-    }
-  
-    &__payment-img {
-      width: 38px;
-      height: 38px;
-      margin-right: 10px;
+  img {
+    width: 65px;
+    height: 45px;
+    object-fit: contain;
+    border-radius: 5px;
+  }
+
+  &__actions {
+    display: flex;
+    align-items: center;
+  }
+
+  &__action {
+    width: 30px;
+    height: 30px;
+    color: #fff;
+    border-radius: 50%;
+
+    font-size: 0.8rem;
+    text-align: center;
+    line-height: 32px;
+    cursor: pointer;
+  }
+
+  &__action:nth-child(2) {
+    margin: 0 8px;
+  }
+
+  &__icon {
+    font-size: 0.8rem;
+  }
+
+  &__payment-img {
+    width: 38px;
+    height: 38px;
+    margin-right: 10px;
+    object-fit: cover;
+  }
+
+  &__payment-img:last-child {
+    width: 80px;
+  }
+
+  &__convenient-img {
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+  }
+
+  &__hotel-img {
+    width: 234px;
+    height: 200px;
+
+    & img {
+      width: 100%;
+      height: 100%;
       object-fit: cover;
-    }
-  
-    &__payment-img:last-child {
-      width: 80px;
-    }
-  
-    &__convenient-img {
-      width: 40px;
-      height: 40px;
-      object-fit: cover;
-    }
-  
-    &__hotel-img {
-      width: 234px;
-      height: 200px;
-  
-      & img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-      }
     }
   }
-  
+}
