done edit hotel , add loading , create uploadfield via antd ,fix UI selectfield ,extend room component can fetch by MaKhachSan

--- a/client/src/custom-fields/InputField/InputField.scss
+++ b/client/src/custom-fields/InputField/InputField.scss
@@ -1,5 +1,6 @@
 .input-field {
     /*-------OVERWRITE ANTD-----------*/
+    // margin-bottom: 15px !important;
 
     .ant-form-item-label > label.ant-form-item-required:not(.ant-form-item-required-mark-optional)::before{
         //clear default of antd
