--- a/client/src/custom-fields/SelectField/SelectField.scss
+++ b/client/src/custom-fields/SelectField/SelectField.scss
@@ -1,9 +1,18 @@
 .select-field {
-    label {
-        font-size: 13px;
-        margin-bottom: 5px;
-        margin-right: 10px;
-        display: block;
+    /*-------OVERWRITE ANTD-----------*/
+    // margin-bottom: 15px !important;
+
+    .ant-form-item-label > label.ant-form-item-required:not(.ant-form-item-required-mark-optional)::before{
+        //clear default of antd
+        content:'';
     }
-    margin-bottom: 15px;
+    .ant-form-item-label > label.ant-form-item-required:not(.ant-form-item-required-mark-optional)::after{
+        display: inline-block;
+        color: #ff4d4f;
+        font-size: 14px;
+        line-height: 1;
+        content: '*';
+        padding-left: 2px;
+    }
+
 }
