fix UI and add confirm bill

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -1,9 +1,9 @@
 .header-wrapper {
-  position: sticky;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 999;
+  // position: sticky;
+  // top: 0;
+  // left: 0;
+  // right: 0;
+  // z-index: 999;
   background-color: #003580;
 }
 
@@ -76,7 +76,7 @@
           border-radius: 2px;
           color: #666;
           font-size: 14px;
-          width: 130%;
+          width: 200px;
           z-index: 1000;
           box-shadow: 1px 1px 25px -8px #aaa;
 
