--- a/client/src/features/Auth/components/FooterPartner/FooterPartner.scss
+++ b/client/src/features/Auth/components/FooterPartner/FooterPartner.scss
@@ -9,6 +9,7 @@
     border-top: 1px solid #e6e6e6;
 }
 .copyright {
+    text-align: center;
     padding-top: 15px;
     font-size: 12px;
     font-weight: 400;
