--- a/client/src/features/Auth/components/HeaderAbout/HeaderAbout.scss
+++ b/client/src/features/Auth/components/HeaderAbout/HeaderAbout.scss
@@ -13,6 +13,12 @@
             width: 120px;
             height: auto;
         }
+        a {
+            font-size: 18px;
+            font-weight: bold;
+            text-decoration: none;
+            color: #fff;
+        }
         &__right {
             ul {
                 margin: 0;
