--- a/client/src/features/Auth/pages/About/ConvenientNService/ConvenientNService.scss
+++ b/client/src/features/Auth/pages/About/ConvenientNService/ConvenientNService.scss
@@ -1,7 +1,11 @@
 .convenient-and-service {
-    display: flex;
+    // display: flex;
+    // width: 100%;
     .row {
         .sticky-col {
+            position: fixed;
+            right: 110px;
+            top:247px;
             font-size: 12px;
             padding: 16px;
             background-color: #fff;
