--- a/client/src/features/Auth/pages/About/InforBasic/InforBasic.scss
+++ b/client/src/features/Auth/pages/About/InforBasic/InforBasic.scss
@@ -3,6 +3,9 @@
         .sticky-col {
             font-size: 12px;
             padding: 16px;
+            position: fixed;
+            right: 110px;
+            top:247px;
             background-color: #fff;
         }
         .align-header {
