--- a/client/src/features/Auth/pages/About/LayoutNPrice/LayoutNPrice.scss
+++ b/client/src/features/Auth/pages/About/LayoutNPrice/LayoutNPrice.scss
@@ -7,6 +7,9 @@
             }
         }
         .sticky-col {
+            position: fixed;
+            right: 110px;
+            top:247px;
             font-size: 12px;
             padding: 16px;
             background-color: #fff;
